--- a/index.html
+++ b/index.html
@@ -47,20 +47,11 @@
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto, rerum unde? Laudantium commodi modi quasi hic dolor reprehenderit</p>
             </div>
         </section>
-        <section div class="servicio">
+        <section div class="servicioindex">
             <h2>Nuestros Servicios</h2>
             <div class="servicio-contenido">
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ea, possimus optio voluptatibus pariatur voluptatum ducimus, iste necessitatibus nostrum nemo a neque quod debitis magnam nisi sequi ratione odio! Voluptate, iusto!Lorem
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ea, possimus optio voluptatibus pariatur voluptatum ducimus, iste necessitatibus nostrum nemo a neque quod debitis magnam nisi sequi ratione odio! Voluptate, iusto!Lorem Lorem ipsum dolor, sit amet consectetur adipisicing elit. Itaque ipsam, nostrum reiciendis ex eius perferendis quos beatae deleniti, iure eligendi impedit natus soluta ab ipsa ipsum, fuga excepturi odio accusamus.
                 </p>
-                <!--Galeria de servicios-->
-                <div class="imagen-container">
-                    <div class="grid-item salon"><img src="./img/salon-spa.jpg" alt="salon-spa"></div>
-                    <div class="grid-item pileta"><img src="./img/pileta.jpg" alt="pileta"></div>
-                    <div class="grid-item limpieza"><img src="./img/limpieza.jpg"alt="limpieza"></div>
-                    <div class="grid-item hall"><img src="./img/hall.jpg"alt="hall"></div>
-                    <div class="grid-item jacuzzi"><img src="./img/jacuzzi.jpg"alt="jacuzzi"></div>
-                    <div class="grid-item masaje"><img src="./img/masaje.jpg"alt="masaje"></div>
-                </div>
             </div>    
         </section>
         <section div class="habitaciones">
@@ -69,14 +60,12 @@
                 <img src="./img/hab-simple.jpg" alt="habitacion-comun">
                 <div class="habitacion-comunes">
                     <h3>Habitacion Simple</h3>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Saepe aspernatur fugiat odit reprehenderit vel consequuntur eveniet architecto voluptatem porro repellendus nulla officia nostrum, officiis dolor laboriosam eos. Quia, ipsum. Dolor?</p>
                 </div>
             </div>
             <div class="habitacion-full">
                 <img src="./img/hab-completa.jpg" alt="habitacion-full">
                 <div class="habitacion-fulles">
                 <h3>Habitacion Suite</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum sint voluptates esse et molestiae illum officiis quod id pariatur porro, expedita tenetur laudantium architecto, earum, veritatis fugiat excepturi maxime dolorum?</p>
                 </div>
             </div>
         </section>
