--- a/pages/habitaciones.html
+++ b/pages/habitaciones.html
@@ -41,7 +41,23 @@
         </nav>
     </header>
     <main>
-        <h2>Habitaciones</h2>
+        <section div class="habitaciones">
+            <h2>Habitaciones</h2>
+            <div class="habitacion-comun">
+                <img src="../img/hab-simple.jpg" alt="habitacion-comun">
+                <div class="habitacion-comunes">
+                    <h3>Habitacion Simple</h3>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Saepe aspernatur fugiat odit reprehenderit vel consequuntur eveniet architecto voluptatem porro repellendus nulla officia nostrum, officiis dolor laboriosam eos. Quia, ipsum. Dolor?</p>
+                </div>
+            </div>
+            <div class="habitacion-full">
+                <img src="../img/hab-completa.jpg" alt="habitacion-full">
+                <div class="habitacion-fulles">
+                    <h3>Habitacion Suite</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum sint voluptates esse et molestiae illum officiis quod id pariatur porro, expedita tenetur laudantium architecto, earum, veritatis fugiat excepturi maxime dolorum?</p>
+                </div>
+            </div>
+        </section>     
     </main>
     <footer>
         <div class="pie-pagina">
