--- a/pages/servicio.html
+++ b/pages/servicio.html
@@ -41,7 +41,20 @@
         </nav>
     </header>
     <main>
-        <h2>Servicio</h2>
+        <section div class="servicio">
+            <h2>Nuestros Servicios</h2>
+            <!--Galeria de servicios-->
+            <div class="servicio-contenido">
+                <div class="imagen-container">
+                    <div class="grid-item salon"><img src="../img/salon-spa.jpg" alt="salon-spa"></div>
+                    <div class="grid-item pileta"><img src="../img/pileta.jpg" alt="pileta"></div>
+                    <div class="grid-item limpieza"><img src="../img/limpieza.jpg"alt="limpieza"></div>
+                    <div class="grid-item hall"><img src="../img/hall.jpg"alt="hall"></div>
+                    <div class="grid-item jacuzzi"><img src="../img/jacuzzi.jpg"alt="jacuzzi"></div>
+                    <div class="grid-item masaje"><img src="../img/masaje.jpg"alt="masaje"></div>
+                </div>
+            </div>
+        </section>
     </main>
     <footer>
         <div class="pie-pagina">
