--- a/pages/ubicacion.html
+++ b/pages/ubicacion.html
@@ -41,7 +41,14 @@
         </nav>
     </header>
     <main>
-        <h2>Ubicacion</h2>
+        <section div class="ubicacion">
+            <h2>Nuestra ubicacion</h2>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Exercitationem nam adipisci pariatur, aut officia vitae quasi, laboriosam hic maxime rerum nostrum porro enim doloremque odio reiciendis odit. Voluptatem, modi mollitia.</p>
+            <div class="mapa">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d8200.660787229532!2d-58.38573955007103!3d-34.603960788052504!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bccacfdd1fa037%3A0xf1b1f26b0eab3053!2sAv.%209%20de%20Julio%2C%20Buenos%20Aires!5e0!3m2!1ses-419!2sar!4v1681833286535!5m2!1ses-419!2sar" width="600" height="400" style="border:1px;" allowfullscreen="" loading="lazy"referrerpolicy="no-referrer-when-downgrade"></iframe>
+            </div>
+        </div>
+    </section>
     </main>
     <footer>
         <div class="pie-pagina">
