--- a/index.html
+++ b/index.html
@@ -4,17 +4,24 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--keywords-->
+    <meta name="keywords" content="hotel, resort, playa, vacaciones, viaje, descanso, servicio, spa, mar, verano, descanso">
+    <!--description-->
+    <meta name="description" content="">
+    <!--favicon-->
+    <link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon">
     <!--link bootstrap css-->    
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="./css/style.css">
-    <title>Inicio</title>
+    <link rel="stylesheet" href="./css/estilos.css">
+    <!--<link rel="stylesheet" href="./css/style.css">-->
+    <title>Resort Beach-In</title>
 </head>
 <body>
     <!--Barra de navegacion-->
     <header>
         <nav class="navbar navbar-expand-lg navbar-light">
             <div class="container-fluid">
-                <a class="navbar-brand" href="./index.html"><h2>Resort Beach</h2></a>
+                <a class="navbar-brand" href="./index.html"><h2>Resort Hotel In</h2></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -83,7 +90,7 @@
     </main>
     <footer>
         <div class="pie-pagina">
-        <a href="./index.html"><h2>Resort Beach</h2></a>
+            <a href="./index.html"><h2>Resort Hotel In</h2></a>
             <div class="redes">
                 <a href="https://twitter.com/" target="blank"><img src="./img/gorjeo.png" alt="Icono twiter"></a>
                 <a href="https://www.facebook.com/"><img src="./img/facebook.png" alt="Icono facebook"></a>
