--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -8,7 +8,8 @@
     <!--link bootstrap css-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/estilos.css">
+    <!--<link rel="stylesheet" href="../css/style.css">-->
     <title>Contacto</title>
 </head>
 
@@ -17,7 +18,7 @@
         <nav class="navbar navbar-expand-lg navbar-light">
             <div class="container-fluid">
                 <a class="navbar-brand" href="../index.html">
-                    <h2>Resort Beach</h2>
+                    <h2>Resort Hotel In</h2>
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation"><span
@@ -61,7 +62,9 @@
                     <label for="texto">Haga su consulta</label>
                     <textarea name="texto" id="texto" cols="30" rows="10"></textarea>
                 </div><br>
-                <input type="submit" value="enviar">
+                <div class="enviar"> 
+                    <input type="submit" value="enviar">
+                </div>
 
             </div>
         </section>
@@ -69,7 +72,7 @@
     <footer>
         <div class="pie-pagina">
             <a href="../index.html">
-                <h2>Resort Beach</h2>
+                <h2>Resort Hotel In</h2>
             </a>
             <div class="redes">
                 <a href="https://twitter.com/"><img src="../img/gorjeo.png" alt="Icono twiter"></a>
