--- a/pages/habitaciones.html
+++ b/pages/habitaciones.html
@@ -6,14 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!--link bootstrap css-->    
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/estilos.css">
+    <!--<link rel="stylesheet" href="../css/style.css">-->
     <title>Habitaciones</title>
 </head>
 <body>
     <header>
         <nav class="navbar navbar-expand-lg navbar-light">
             <div class="container-fluid">
-                <a class="navbar-brand" href="../index.html"><h2>Resort Beach</h2></a>
+                <a class="navbar-brand" href="../index.html"><h2>Resort Hotel In</h2></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -61,7 +62,7 @@
     </main>
     <footer>
         <div class="pie-pagina">
-            <a href="../index.html"><h2>Resort Beach</h2></a>
+            <a href="../index.html"><h2>Resort Hotel In</h2></a>
             <div class="redes">
                 <a href="https://twitter.com/"><img src="../img/gorjeo.png" alt="Icono twiter"></a>
                 <a href="https://www.facebook.com/"><img src="../img/facebook.png" alt="Icono facebook"></a>
