--- a/pages/habitaciones.html
+++ b/pages/habitaciones.html
@@ -4,10 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--keywords-->
+    <meta name="keywords" content="hotel, resort, playa, vacaciones, viaje, descanso, servicio, spa, mar, verano, descanso">
+    <!--description-->
+    <meta name="description" content="resort hotel con vista a la playa, todo incluido con varias actividades tanto como para relajarse en nuestro jacuzz o en el spa, o como para disfrutar en la pileta o al aire libre en la playa privada con la que contamos">
+    <!--favicon-->
+    <link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon">
     <!--link bootstrap css-->    
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/estilos.css">
-    <!--<link rel="stylesheet" href="../css/style.css">-->
     <title>Habitaciones</title>
 </head>
 <body>
@@ -48,14 +53,14 @@
                 <img src="../img/hab-simple.jpg" alt="habitacion-comun">
                 <div class="habitacion-comunes">
                     <h3>Habitacion Simple</h3>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Saepe aspernatur fugiat odit reprehenderit vel consequuntur eveniet architecto voluptatem porro repellendus nulla officia nostrum, officiis dolor laboriosam eos. Quia, ipsum. Dolor?</p>
+                    <p>Amplia habitación con cama de tamaño queen y escritorio. Elegante decoración de estilo clásico. Equipadas con TV LED, aislación acústica, control individual de aire acondicionado y calefacción, WI-FI sin cargo, sprinkler, detectores de humo, minibar y escritorio. Caja de seguridad electrónica para notebook.</p>
                 </div>
             </div>
             <div class="habitacion-full">
                 <img src="../img/hab-completa.jpg" alt="habitacion-full">
                 <div class="habitacion-fulles">
                     <h3>Habitacion Suite</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum sint voluptates esse et molestiae illum officiis quod id pariatur porro, expedita tenetur laudantium architecto, earum, veritatis fugiat excepturi maxime dolorum?</p>
+                    <p>Amplias habitaciones con cama king size y balcón con vista panorámica a la playa. Elegante decoración de estilo clásico. Equipadas con TV LED, aislación acústica, control individual de aire acondicionado y calefacción, WI-FI sin cargo, sprinkler, detectores de humo, minibar y escritorio. Caja de seguridad electrónica para notebook.</p>
                 </div>
             </div>
         </section>     
@@ -70,7 +75,7 @@
                 <a href="https://web.whatsapp.com/"><img src="../img/whatsapp.png" alt="Icono Whatsapp"></a>
             </div>
         </div>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem esse ullam.</p>
+        <p>© Copyright | Resort Hotel In | Todos los derechos reservados.</p>
     </footer>
 <!--link bootstrap js-->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
