--- a/pages/ubicacion.html
+++ b/pages/ubicacion.html
@@ -4,10 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--keywords-->
+    <meta name="keywords" content="hotel, resort, playa, vacaciones, viaje, descanso, servicio, spa, mar, verano, descanso">
+    <!--description-->
+    <meta name="description" content="resort hotel con vista a la playa, todo incluido con varias actividades tanto como para relajarse en nuestro jacuzz o en el spa, o como para disfrutar en la pileta o al aire libre en la playa privada con la que contamos">
+    <!--favicon-->
+    <link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon">
     <!--link bootstrap css-->    
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/estilos.css">
-    <!--<link rel="stylesheet" href="../css/style.css">-->
     <title>Ubicacion</title>
 </head>
 <body>
@@ -44,10 +49,12 @@
     <main>
         <section div class="ubicacion">
             <h2>Nuestra ubicacion</h2>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Exercitationem nam adipisci pariatur, aut officia vitae quasi, laboriosam hic maxime rerum nostrum porro enim doloremque odio reiciendis odit. Voluptatem, modi mollitia.</p>
-            <div class="mapa">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d8200.660787229532!2d-58.38573955007103!3d-34.603960788052504!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bccacfdd1fa037%3A0xf1b1f26b0eab3053!2sAv.%209%20de%20Julio%2C%20Buenos%20Aires!5e0!3m2!1ses-419!2sar!4v1681833286535!5m2!1ses-419!2sar" width="600" height="400" style="border:1px;" allowfullscreen="" loading="lazy"referrerpolicy="no-referrer-when-downgrade"></iframe>
-            </div>
+            <div class="contenidoUbicacion">
+                <p>Nuestra privilegiada ubicación te permite disfrutar de kilómetros de arena dorada, aguas cristalinas y vistas panorámicas al océano. Además, nos encontramos cerca de atracciones locales, tiendas, restaurantes y emocionantes actividades turísticas, para que puedas explorar y sumergirte en la cultura de la región.</p>
+                <div class="mapa">
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d8200.660787229532!2d-58.38573955007103!3d-34.603960788052504!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bccacfdd1fa037%3A0xf1b1f26b0eab3053!2sAv.%209%20de%20Julio%2C%20Buenos%20Aires!5e0!3m2!1ses-419!2sar!4v1681833286535!5m2!1ses-419!2sar" width="600" height="400" style="border:1px;" allowfullscreen="" loading="lazy"referrerpolicy="no-referrer-when-downgrade"></iframe>
+                </div>
+            </div>    
         </div>
     </section>
     </main>
@@ -61,7 +68,7 @@
                 <a href="https://web.whatsapp.com/"><img src="../img/whatsapp.png" alt="Icono Whatsapp"></a>
             </div>
         </div>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem esse ullam.</p>
+        <p>© Copyright | Resort Hotel In | Todos los derechos reservados.</p>
     </footer>
 <!--link bootstrap js-->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
