--- a/index.html
+++ b/index.html
@@ -7,13 +7,12 @@
     <!--keywords-->
     <meta name="keywords" content="hotel, resort, playa, vacaciones, viaje, descanso, servicio, spa, mar, verano, descanso">
     <!--description-->
-    <meta name="description" content="">
+    <meta name="description" content="resort hotel con vista a la playa, todo incluido con varias actividades tanto como para relajarse en nuestro jacuzz o en el spa, o como para disfrutar en la pileta o al aire libre en la playa privada con la que contamos">
     <!--favicon-->
     <link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon">
     <!--link bootstrap css-->    
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/estilos.css">
-    <!--<link rel="stylesheet" href="./css/style.css">-->
     <title>Resort Hotel-In</title>
 </head>
 <body>
@@ -51,40 +50,20 @@
     <main>
         <section div class="bienvenidos">
             <h2>Bienvenidos</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto, rerum unde? Laudantium commodi modi quasi hic dolor reprehenderit</p>
+            <div class="pbienvenidos">
+                <p>¡Bienvenido al paraíso en la playa! Descubre nuestro increíble Hotel Resort y déjate cautivar por la perfecta combinación entre lujo, tranquilidad y diversión bajo el sol. Sumérgete en aguas cristalinas, relájate en nuestras exuberantes instalaciones y crea recuerdos inolvidables en nuestro oasis tropical.</p>
+            </div>
             </div>
         </section>
         <section div class="servicioindex">
             <h2>Nuestros Servicios</h2>
             <div class="servicio-contenido">
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ea, possimus optio voluptatibus pariatur voluptatum ducimus, iste necessitatibus nostrum nemo a neque quod debitis magnam nisi sequi ratione odio! Voluptate, iusto!Lorem Lorem ipsum dolor, sit amet consectetur adipisicing elit. Itaque ipsam, nostrum reiciendis ex eius perferendis quos beatae deleniti, iure eligendi impedit natus soluta ab ipsa ipsum, fuga excepturi odio accusamus.
+                <p>En nuestro Hotel Resort en la playa, nos enorgullece ofrecerte una amplia gama de servicios diseñados para hacer de tu estadía una experiencia inolvidable. Algunos de los servicios que puedes disfrutar son la pileta con vista a la playa, el spa disponible a todo horario, nuestra playa privada y algunos de los restaurantes que poseemos.
                 </p>
             </div>    
         </section>
-        <section div class="habitaciones">
-            <h2>Habitaciones</h2>
-            <div class="habitacion-comun">
-                <img src="./img/hab-simple.jpg" alt="habitacion-comun">
-                <div class="habitacion-comunes">
-                    <h3>Habitacion Simple</h3>
-                </div>
-            </div>
-            <div class="habitacion-full">
-                <img src="./img/hab-completa.jpg" alt="habitacion-full">
-                <div class="habitacion-fulles">
-                <h3>Habitacion Suite</h3>
-                </div>
-            </div>
-        </section>
         <section div class="contactenos">
             <h2><a href="./pages/contacto.html">CONTACTENOS AQUI</a></h2>
-            </div>
-        </section>
-        <section div class="ubicacion">
-                <h2>Nuestra ubicacion</h2>
-                <div class="mapa">
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d8200.660787229532!2d-58.38573955007103!3d-34.603960788052504!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bccacfdd1fa037%3A0xf1b1f26b0eab3053!2sAv.%209%20de%20Julio%2C%20Buenos%20Aires!5e0!3m2!1ses-419!2sar!4v1681833286535!5m2!1ses-419!2sar" width="600" height="400" style="border:1px;" allowfullscreen="" loading="lazy"referrerpolicy="no-referrer-when-downgrade"></iframe>
-                </div>
             </div>
         </section>
     </main>
@@ -98,7 +77,7 @@
                 <a href="https://web.whatsapp.com/"><img src="./img/whatsapp.png" alt="Icono Whatsapp"></a>
             </div>
         </div>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem esse ullam.</p>
+        <p>© Copyright | Resort Hotel In | Todos los derechos reservados.</p>
     </footer>
     <!--link bootstrap js-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
