--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -5,11 +5,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--keywords-->
+    <meta name="keywords" content="hotel, resort, playa, vacaciones, viaje, descanso, servicio, spa, mar, verano, descanso">
+    <!--description-->
+    <meta name="description" content="resort hotel con vista a la playa, todo incluido con varias actividades tanto como para relajarse en nuestro jacuzz o en el spa, o como para disfrutar en la pileta o al aire libre en la playa privada con la que contamos">
+    <!--favicon-->
+    <link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon">
     <!--link bootstrap css-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/estilos.css">
-    <!--<link rel="stylesheet" href="../css/style.css">-->
     <title>Contacto</title>
 </head>
 
@@ -43,7 +48,7 @@
     </header>
     <main>
         <section class="registro-contacto">
-            <h2>Contactenos!!</h2>
+            <h2>Contactenos</h2>
             <div class="contacto">
 
                 <div>
@@ -81,7 +86,7 @@
                 <a href="https://web.whatsapp.com/"><img src="../img/whatsapp.png" alt="Icono Whatsapp"></a>
             </div>
         </div>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem esse ullam.</p>
+        <p>© Copyright | Resort Hotel In | Todos los derechos reservados.</p>
     </footer>
     <!--link bootstrap js-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
