--- a/pages/servicio.html
+++ b/pages/servicio.html
@@ -1,20 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!--link bootstrap css-->    
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <!--keywords-->
+    <meta name="keywords" content="hotel, resort, playa, vacaciones, viaje, descanso, servicio, spa, mar, verano, descanso">
+    <!--description-->
+    <meta name="description" content="resort hotel con vista a la playa, todo incluido con varias actividades tanto como para relajarse en nuestro jacuzz o en el spa, o como para disfrutar en la pileta o al aire libre en la playa privada con la que contamos">
+    <!--favicon-->
+    <link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon">
+    <!--link bootstrap css-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/estilos.css">
-    <!--<link rel="stylesheet" href="../css/style.css">-->
+
     <title>Servicio</title>
 </head>
+
 <body>
     <header>
         <nav class="navbar navbar-expand-lg navbar-light">
             <div class="container-fluid">
-                <a class="navbar-brand" href="../index.html"><h2>Resort Hotel In</h2></a>
+                <a class="navbar-brand" href="../index.html">
+                    <h2>Resort Hotel In</h2>
+                </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -44,22 +55,59 @@
     <main>
         <section div class="servicio">
             <h2>Nuestros Servicios</h2>
-            <!--Galeria de servicios-->
-            <div class="servicio-contenido">
-                <div class="imagen-container">
-                    <div class="grid-item salon"><img src="../img/salon-spa.jpg" alt="salon-spa"></div>
-                    <div class="grid-item pileta"><img src="../img/pileta.jpg" alt="pileta"></div>
-                    <div class="grid-item limpieza"><img src="../img/limpieza.jpg"alt="limpieza"></div>
-                    <div class="grid-item hall"><img src="../img/hall.jpg"alt="hall"></div>
-                    <div class="grid-item jacuzzi"><img src="../img/jacuzzi.jpg"alt="jacuzzi"></div>
-                    <div class="grid-item masaje"><img src="../img/masaje.jpg"alt="masaje"></div>
+            <div id="carouselExampleIndicators" class="carousel slide">
+                <div class="carousel-indicators">
+                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0"
+                        class="active" aria-current="true" aria-label="Slide 1"></button>
+                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
+                        aria-label="Slide 2"></button>
+                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
+                        aria-label="Slide 3"></button>
+                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3"
+                        aria-label="Slide 4"></button>
+                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="4"
+                        aria-label="Slide 5"></button>
+                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="5"
+                        aria-label="Slide 6"></button>    
+                    </div>
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <img src="../img/salon-spa.jpg" class="d-block w-100" alt="salon-spa">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="../img/pileta.jpg" class="d-block w-100" alt="pileta">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="../img/limpieza.jpg" class="d-block w-100" alt="limpieza">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="../img/hall.jpg" class="d-block w-100" alt="hall">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="../img/jacuzzi.jpg" class="d-block w-100" alt="jacuzzi">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="../img/masaje.jpg" class="d-block w-100" alt="masaje">
+                    </div>
                 </div>
-            </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
+                    data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
+                data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+            </button>
+        </div>
         </section>
     </main>
     <footer>
         <div class="pie-pagina">
-            <a href="../index.html"><h2>Resort Hotel In</h2></a>
+            <a href="../index.html">
+                <h2>Resort Hotel In</h2>
+            </a>
             <div class="redes">
                 <a href="https://twitter.com/"><img src="../img/gorjeo.png" alt="Icono twiter"></a>
                 <a href="https://www.facebook.com/"><img src="../img/facebook.png" alt="Icono facebook"></a>
@@ -67,10 +115,13 @@
                 <a href="https://web.whatsapp.com/"><img src="../img/whatsapp.png" alt="Icono Whatsapp"></a>
             </div>
         </div>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem esse ullam.</p>
+        <p>© Copyright | Resort Hotel In | Todos los derechos reservados.</p>
     </footer>
-<!--link bootstrap js-->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    <!--link bootstrap js-->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+        crossorigin="anonymous"></script>
 
 </body>
+
 </html>
